kustomize/GOTY-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goty-deploy
  namespace: mi-goty-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goty-app
  template:
    metadata:
      labels:
        app: goty-app
    spec:
      containers:
      - name: goty-container
        image: gastonlc/angularapp:1.0.0-dev
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: goty-service
  namespace: mi-goty-namespace 
spec:
  selector:
    app: goty-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
